added piece mesh with geometry and materials.

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     </style>
 </head>
 <body>
+<!--<div style="position: absolute; z-index: 2">-->
+<!--    js/modifiers/SubdivisionModifier.js скошенные углы-->
+<!--</div>-->
 <div id="app"></div>
 </body>
 </html>
